Bug 1276595 - Part 2: Test case for parsing update response. r=francois.

--- a/toolkit/components/url-classifier/tests/unit/xpcshell.ini
+++ b/toolkit/components/url-classifier/tests/unit/xpcshell.ini
@@ -5,6 +5,7 @@ skip-if = toolkit == 'android' || toolkit == 'gonk'
 support-files =
   data/digest1.chunk
   data/digest2.chunk
+  data/test_update_response
 
 [test_addsub.js]
 [test_backoff.js]
@@ -21,3 +22,4 @@ support-files =
 [test_listmanager.js]
 [test_pref.js]
 [test_safebrowsing_protobuf.js]
+[test_v4_protobuf_update_response.js]
