Bug 1274685 - Part 2: Test case. r=francois.

--- a/toolkit/components/url-classifier/tests/unit/xpcshell.ini
+++ b/toolkit/components/url-classifier/tests/unit/xpcshell.ini
@@ -8,6 +8,7 @@ support-files =
   data/test_update_response
 
 [test_addsub.js]
+[test_bug1274685_unowned_list.js]
 [test_backoff.js]
 [test_dbservice.js]
 [test_hashcompleter.js]
